# fitnessAPI

./: README.md  db.sqlite3  main.py  manage.py  pyproject.toml
fitnessAPI/: asgi.py  settings.py  urls.py  wsgi.py
workout/: admin.py  models.py  serializers.py  urls.py  views.py
workout/migrations/: 0001_initial.py  0002_alter_workout_options_workoutexercise_date_and_more.py
